--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -104,7 +104,7 @@
         <div class="col-6 col-lg-6 s1"
           *ngIf="!this.productDetail['productDetail'] || this.productDetail['productDetail'].length==0">
           Quantity: <input type="number" [value]="quantity" min="0" max={{productDetail.availableStock}}
-            [(ngModel)]="quantity" (click)="quantitycheck()">
+            [(ngModel)]="quantity" (click)="quantitycheck(productDetail)">
         </div>
         <div *ngIf="!this.productDetail['productDetail'] || this.productDetail['productDetail'].length>0">
           <div class="mt-2 ml-2">
@@ -132,11 +132,12 @@
         </div>
         <div class="col-6 col-lg-6 mt-2">
           <button class='btn btn_gold' (click)="manageCartProds()"
-            [disabled]="(0>= this.quantity || this.quantity > this.productDetail.availableStock) && (this.cartForm.invalid || this.isInputZero)">Add
+            [disabled]="this.addToCartControl || (0>= this.quantity || this.quantity > this.productDetail.availableStock) && (this.cartForm.invalid || this.isInputZero)" >Add
             to cart</button>
         </div>
-
-
+        <!--&& (0>= this.quantity || this.quantity > this.productDetail.availableStock) && (this.cartForm.invalid || this.isInputZero)
+ -->
+        
 
       </div>
 
