little update on userregistration for subscription

--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -92,7 +92,7 @@
 		</div>
 
 		<div class="slide">
-			<mat-slide-toggle aria-label="Subscribe" color="primary"></mat-slide-toggle>
+			<mat-slide-toggle  (change)="onSlideChange($event)" aria-label="Subscribe" color="primary"></mat-slide-toggle>
 			<span> Subscribe to our news letter</span>
 		</div>
 
