--- a/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
+++ b/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
@@ -4,23 +4,42 @@
 	</div>
 	<div class="card-body bg-light text-center">
 		<form>
-			<div class="formBody my-4">
-				<p><span>Email:</span><em> jamesbond@mi6.com</em></p>
-				<p><span>Phone:</span> 1234567</p>
-				<p><span>Company:</span> MI 6</p>
-			</div>
+			<mat-form-field>
+				<input matInput placeholder="First Name" value="James">
+			</mat-form-field>
 
-			<div class="slide">
-				<mat-slide-toggle aria-label="Subscribe" color="primary"></mat-slide-toggle>
-				<span> Subscribe to our news letter</span>
-			</div>
+			<mat-form-field>
+				<input matInput placeholder="Last Name" value="Bond">
+			</mat-form-field>
 
-			<hr>
+			<mat-form-field>
+				<input matInput placeholder="Email Address" value="jamesbond@mi6.com">
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput placeholder="Phone No." value="1234567">
+			</mat-form-field>
+
+			<mat-form-field>
+				<input matInput placeholder="Company" value="MI6">
+			</mat-form-field>
+		
 			<div id="buttonsWrap" class="mt-2">
 				<button mat-raised-button class="primaryButton" routerLink='/home'>Update</button>
 			</div>
 		</form>
 	</div>
+
+	<h5 style="margin: 0 auto; margin-top: 30px;">Current Users:</h5><hr>
+	<ul *ngFor="let profile of profile" class="text-center" style="list-style: none; padding: 0;">
+		
+		<li>
+			<h5>{{ profile.fname }} {{ profile.lname }}</h5>
+			<p>Email: {{ profile.email }}</p>
+
+		</li>
+		<hr>
+	</ul>
 </div>
 
 <style>
@@ -32,6 +51,10 @@
 	}
 	span {
 		color: #c48f45;
+	}
+	form {
+		width: 50%;
+		margin: 0 auto;
 	}
 	.card {
 		min-height: 350px;
