--- a/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-checkout.component.html
@@ -28,7 +28,7 @@
       <br><br><br>
       <div style="text-align: left;" class="m1">Shopping Bag</div>
       <hr>
-      <app-shopping_cart></app-shopping_cart>
+      <app-shopping-cart></app-shopping-cart>
     </div>
     <div class="col-lg-4 col-12">
       <app-userInfo></app-userInfo>
