--- a/src/app/fcomponents/shopping-cart/shopping-cart.component.html
+++ b/src/app/fcomponents/shopping-cart/shopping-cart.component.html
@@ -7,14 +7,11 @@
         <div class="divdetails">Unit Price: ${{prod.Price/prod.Quantity}}</div>
 
         <div>
-          Amount:
-          <input #quantityInput class="quantityInput quantity" value={{userInputQuantityArray[i]}} (change)="quantityChanged($event,i)" type="number" min="1" />
-          <div class="invalid_feedback" role="alert" *ngIf="userInputQuantityArray[i] > prodsInCart[i].availableStock " >
-            Only {{prodsInCart[i].availableStock}} are available. Please contact us if you need more!
-          </div>
+          Amount: {{userInputQuantityArray[i]}}
         </div>
-
-        <div class="bg-gray divdetails"> NZ${{prod.Price}}</div>
+        <div>Start date:</div>
+        <div>Return date:</div>
+        <div class="bg-gray divdetails"> NZ ${{prod.Price}}</div>
         <div class="mt-2 divdetails">
           <button class="btn btn-outline-blue" [routerLink]="[ '/product/', prod.ProdId ]">View Detail</button>
           <button class="btn btn-outline-red" (click)="deleteCart(i)" style="float:right;">Delete</button>
@@ -31,7 +28,7 @@
       <br>
     </div>
     <div class="text-right mb-2" *ngIf="totalPrice!=0">
-      Total Price: NZ$<span class="s2bold">{{totalPrice}}</span>
+      Total Price: NZ $<span class="s2bold">{{totalPrice}}</span>
     </div>
     <div class="justify-content-end mb-3" *ngIf="prodsInCart.length!=0">
       <button class="btn btn_gold btn-sm" routerLink="/" type="button">
