--- a/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
+++ b/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
@@ -5,7 +5,7 @@
 	<div *ngIf="profile" class="card-body bg-light text-center">
 		<form>
 			<mat-form-field>
-				<input matInput placeholder="First Name" value="{{ profile['data'][0].fname }}">
+				<input matInput placeholder="First Name" value="{{ profile['data'][0].firstname }}">
 			</mat-form-field>
 
 			<mat-form-field>
