--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -293,6 +293,13 @@
         </a>
       </li>
 	  <!-- <span class="navspace"></span> -->
+
+	  <span class="navspace"></span>
+	  <li class="nav-item">
+		  <a class="nav-link s2bold" (click)="logout()">
+			  <h1 class="s2bold">Log out</h1>
+		  </a>
+	  </li>
 	  
       <!--!Shopping Cart-->
       <li class="nav-item ml-lg-4 pl-md-1">
