--- a/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
+++ b/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
@@ -1,36 +1,45 @@
-<div class="card">
+<div *ngIf="profile" class="card">
 	<div class="card-header">
-		<h4>User #{{ userId }}</h4>	
+		<h4>{{ firstname }} {{ lastname }}</h4>	
 	</div>
-	<div *ngIf="profile" class="card-body bg-light text-center">
-		<form>
+	<div class="card-body bg-light text-center">
+		<form [formGroup]="updateProfileForm" (ngSubmit)="onSubmit()">
 			<mat-form-field>
-				<input matInput placeholder="First Name" value="{{ profile['data'][0].firstname }}">
+				<input matInput formControlName="fname" placeholder="First Name">
+				<mat-error *ngIf="fname.invalid">{{getErrorMessage1()}}</mat-error>
 			</mat-form-field>
 
 			<mat-form-field>
-				<input matInput placeholder="Last Name" value="{{ profile['data'][0].lname }}">
+				<input matInput formControlName="lname" placeholder="Last Name">
+				<mat-error *ngIf="lname.invalid">{{getErrorMessage2()}}</mat-error>
 			</mat-form-field>
 
 			<mat-form-field>
-				<input matInput placeholder="Email Address (Disabled)" value="{{ profile['data'][0].email }}" disabled>
+				<input matInput placeholder="Email Address (Disabled)" value="{{ email }}" disabled>
 			</mat-form-field>
 
 			<mat-form-field>
-				<input matInput placeholder="Phone No." value="{{ profile['data'][0].phone }}">
+				<input matInput formControlName="phone" placeholder="Phone No.">
+				<mat-error *ngIf="phone.invalid">{{getErrorMessage3()}}</mat-error>
 			</mat-form-field>
 
 			<mat-form-field>
-				<input matInput placeholder="Company" value="{{ profile['data'][0].company }}">
+				<input matInput formControlName="company" placeholder="Company">
+				<mat-error *ngIf="company.invalid">{{getErrorMessage4()}}</mat-error>
 			</mat-form-field>
 
 			<div class="slide">
-				<mat-slide-toggle (change)="onSlideChange($event)" aria-label="Subscribe" color="primary"></mat-slide-toggle>
-				<span> Subscribe to our news letter</span>
+				<mat-slide-toggle (change)="onSlideChange($event)" aria-label="Subscribe" formControlName="subscribe" color="primary"></mat-slide-toggle>
+				<span> Subscribe to our news letter</span><br>
 			</div>
 		
 			<div id="buttonsWrap" class="mt-2">
-				<button mat-raised-button class="primaryButton">Update</button>
+				<button mat-button [matMenuTriggerFor]="menu" class="primaryButton">Update Profile</button>
+				<mat-menu #menu="matMenu" overlapTrigger="true">
+					<p style="color: #c48f45;" mat-menu-item disabled>Everything Correct? <br></p>
+					<button type="submit" mat-menu-item class="primaryButton">Yes</button>
+					<button mat-menu-item>Cancel</button>
+				</mat-menu>
 			</div>
 		</form>
 	</div>
