--- a/src/app/fcomponents/user-dashboard/manage-password/manage-password.component.html
+++ b/src/app/fcomponents/user-dashboard/manage-password/manage-password.component.html
@@ -11,10 +11,10 @@
 					[attr.aria-pressed]="hide">
 					<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
 				</button>
-				<mat-error *ngIf="password.invalid">{{getErrorMessage2()}}</mat-error>
+				<mat-error *ngIf="password.invalid">{{getErrorMessage1()}}</mat-error>
 			</mat-form-field>
 			<mat-form-field>
-				<input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'"
+				<input matInput placeholder="New Password" formControlName="password" [type]="hide ? 'password' : 'text'"
 				(ngModleChange)="update()" required>
 				<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
 					[attr.aria-pressed]="hide">
