updated shopping cart, userinfo

--- a/src/app/fcomponents/payment-result/payment-result.component.html
+++ b/src/app/fcomponents/payment-result/payment-result.component.html
@@ -1,3 +1,24 @@
-<p>
-  payment-result works!
-</p>
+<div class="container">
+
+
+
+
+  <div class="card">
+    <div class="card-header">
+      <h4>Your Payment Status</h4>
+    </div>
+    <div class="card-body bg-light text-center">
+      {{paymentStatus}}
+    </div>
+
+  </div>
+
+
+  <div id="buttonsWrap">
+    <button mat-raised-button routerLink='/home'>OK</button>
+  </div>
+
+
+
+
+</div>
