--- a/src/app/fcomponents/userInfo/userInfo.component.html
+++ b/src/app/fcomponents/userInfo/userInfo.component.html
@@ -1,100 +1,124 @@
 <!-- form -->
-   <div *ngIf="isSendingEmail">We are processing your shopping cart. Please wait...
-      <div class="spinner-border text-info" role="status">
-         <span class="sr-only">Loading...</span>
-      </div>
+<div *ngIf="isSendingEmail">We are processing your shopping cart. Please wait...
+   <div class="spinner-border text-info" role="status">
+      <span class="sr-only">Loading...</span>
    </div>
-   <div *ngIf="isSendSuccess" class="alert alert-success" role="alert">Success! Thank you for placing the order!</div>
-   <form class="col-12" novalidate #f="ngForm" (ngSubmit)="onSubmit(f)" style="padding-left:0;" *ngIf="!isSendSuccess">
-         <!-- first name -->
-            <div class="form-group">
-               
-               <div class="invalid_feedback" *ngIf="FirstName.errors?.required && FirstName.touched">Please enter your
-                  First name</div>
-               <div class="invalid_feedback" *ngIf=" FirstName.errors?.minlength && FirstName.touched ">
-                  Your first name shall be at least 2 characters
-               </div>
-               <input class="form-control s2" type="FirstName" required minlength="2" name="FirstName" placeholder="Enter your first name"
-                  [ngClass]="{'is-invalid':FirstName.errors?.required && FirstName.touched}" [(ngModel)]="userInfo.FirstName"
-                  #FirstName="ngModel">
-            </div>
+</div>
+<div *ngIf="isSendSuccess" class="alert alert-success" role="alert">Success! Thank you for placing the order!</div>
+<form class="col-12" novalidate #f="ngForm" (ngSubmit)="onSubmit(f)" style="padding-left:0;" *ngIf="!isSendSuccess">
+   <!-- first name -->
+   <div class="form-group">
 
-         <!-- last name -->
-         <div class="form-group ">
-            <div class="invalid_feedback" *ngIf="LastName.errors?.required && LastName.touched">Please enter your
-               Last name</div>
-            <div class="invalid_feedback" *ngIf=" LastName.errors?.minlength && LastName.touched ">
-               Your last shall be at least 2 characters
-            </div>
-            <input class="form-control s2" type="LastName" required minlength="2" name="LastName" placeholder="Enter your last name"
-               [ngClass]="{'is-invalid':LastName.errors?.required && LastName.touched}" [(ngModel)]="userInfo.LastName"
-               #LastName="ngModel">
-         </div>
-         <!-- Email -->
-         <div class="form-group ">
-            <div class="invalid_feedback" *ngIf="Email.errors?.required && Email.touched">Please input your E-mail</div>
-            <div class="invalid_feedback" *ngIf="Email.errors?.pattern && Email.touched">Incorrect Email entered</div>
-            <input class="form-control s2" type="Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
-               minlength="6" name="Email" placeholder="Enter your email" [ngClass]="{'is-invalid':Email.errors?.required && Email.touched}"
-               [(ngModel)]="userInfo.Email" #Email="ngModel">
-         </div>
-         <!-- phone number -->
-         <div class="form-group ">
-            <div class="invalid_feedback" *ngIf="PhoneNum.errors?.required && PhoneNum.touched">Please input your Phone
-               number</div>
-            <div class="invalid_feedback" *ngIf="PhoneNum.errors?.pattern && PhoneNum.touched">
-               Please enter the correct phone number.
-            </div>
-            <input class="form-control s2" type="tel" required pattern="[0-9]{7,15}" minlength="7" name="PhoneNum"
-               placeholder="Enter your phone number" [ngClass]="{'is-invalid':PhoneNum.errors?.required && PhoneNum.touched}"
-               [(ngModel)]="userInfo.PhoneNum" #PhoneNum="ngModel">
-         </div>
-         <!-- company -->
-         <div class="form-group "><input class="form-control s2" type="text" placeholder="Company" [(ngModel)]="userInfo.company"
-               name="company"></div>
-         <!-- city -->
-         <div class="form-group ">
-            <div class="invalid_feedback" *ngIf="city.errors?.required && city.touched">Please enter your city</div>
-            <div class="invalid_feedback" *ngIf=" city.errors?.minlength && city.touched ">
-               Please enter the corrct city.
-            </div>
-            <input class="form-control s2" type="city" required minlength="2" name="city" placeholder="Event city" [ngClass]="{'is-invalid':city.errors?.required && city.touched}"
-               [(ngModel)]="userInfo.city" #city="ngModel">
-         </div>
-         <!-- street address -->
-         <div class="form-group ">
-            <div class="invalid_feedback" *ngIf="streetAddress.errors?.required && streetAddress.touched">Please enter
-               your street address</div>
-            <div class="invalid_feedback" *ngIf=" streetAddress.errors?.minlength && streetAddress.touched ">
-               Please enter the corrct address.
-            </div>
-            <input class="form-control s2" type="streetAddress" required minlength="2" name="streetAddress" placeholder="Event street address"
-               [ngClass]="{'is-invalid':streetAddress.errors?.required && streetAddress.touched}" [(ngModel)]="userInfo.streetAddress"
-               #streetAddress="ngModel">
-         </div>
-         <!-- event data -->
-            <mat-form-field style="width:100%">
-               <input matInput [matDatepicker]="myDatepicker" [min]="minDate" placeholder="Event date" type="dateOfEvent"
-                  required name="dateOfEvent" [ngClass]="{'is-invalid':dateOfEvent.errors?.required && dateOfEvent.touched}"
-                  [(ngModel)]="PlannedTime" #dateOfEvent="ngModel">
-               <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
-               <mat-datepicker #myDatepicker></mat-datepicker>
-               <mat-error *ngIf="dateOfEvent.invalid">Please enter a Date</mat-error>
-            </mat-form-field>
-         <!-- Message -->
-         <div class="form-group">
-            <textarea class="form-control s2" rows="5" type="Message" name="Message" placeholder="Send a message:"
-               [(ngModel)]="userInfo.Message" #Message="ngModel">
-                      </textarea>
-         </div>
-
-      <div class="invalid_feedback mb-4">{{feedback_message}}</div>
-      <div class="row">
-         <div class="col-12 text-center"><button class="btn btn-outline-gold btn-block" type="submit" [disabled]="isSendingEmail || isCartEmpty || !isShoppingCartValid">Submit</button></div>
+      <div class="invalid_feedback" *ngIf="FirstName.errors?.required && FirstName.touched">Please enter your
+         First name</div>
+      <div class="invalid_feedback" *ngIf=" FirstName.errors?.minlength && FirstName.touched ">
+         Your first name shall be at least 2 characters
       </div>
-   </form>
-   <!-- order summary -->
-   <!-- <div class="col-4 border-left">
+      <input class="form-control s2" type="FirstName" required minlength="2" name="FirstName"
+         placeholder="Enter your first name" [ngClass]="{'is-invalid':FirstName.errors?.required && FirstName.touched}"
+         [(ngModel)]="userInfo.FirstName" #FirstName="ngModel">
+   </div>
+
+   <!-- last name -->
+   <div class="form-group ">
+      <div class="invalid_feedback" *ngIf="LastName.errors?.required && LastName.touched">Please enter your
+         Last name</div>
+      <div class="invalid_feedback" *ngIf=" LastName.errors?.minlength && LastName.touched ">
+         Your last shall be at least 2 characters
+      </div>
+      <input class="form-control s2" type="LastName" required minlength="2" name="LastName"
+         placeholder="Enter your last name" [ngClass]="{'is-invalid':LastName.errors?.required && LastName.touched}"
+         [(ngModel)]="userInfo.LastName" #LastName="ngModel">
+   </div>
+   <!-- Email -->
+   <div class="form-group ">
+      <div class="invalid_feedback" *ngIf="Email.errors?.required && Email.touched">Please enter your E-mail</div>
+      <div class="invalid_feedback" *ngIf="Email.errors?.pattern && Email.touched">Incorrect Email entered</div>
+      <input class="form-control s2" type="Email" required pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[a-z]{2,3}$"
+         minlength="6" name="Email" placeholder="Enter your email"
+         [ngClass]="{'is-invalid':Email.errors?.required && Email.touched}" [(ngModel)]="userInfo.Email"
+         #Email="ngModel">
+   </div>
+   <!-- phone number -->
+   <div class="form-group ">
+      <div class="invalid_feedback" *ngIf="PhoneNum.errors?.required && PhoneNum.touched">Please input your Phone
+         number</div>
+      <div class="invalid_feedback" *ngIf="PhoneNum.errors?.pattern && PhoneNum.touched">
+         Please enter the correct phone number.
+      </div>
+      <input class="form-control s2" type="tel" required pattern="[0-9]{7,15}" minlength="7" name="PhoneNum"
+         placeholder="Enter your phone number" [ngClass]="{'is-invalid':PhoneNum.errors?.required && PhoneNum.touched}"
+         [(ngModel)]="userInfo.PhoneNum" #PhoneNum="ngModel">
+   </div>
+   <!-- company -->
+   <div class="form-group "><input class="form-control s2" type="text" placeholder="Company"
+         [(ngModel)]="userInfo.company" name="company"></div>
+   <!-- city -->
+   <div class="form-group ">
+      <div class="invalid_feedback" *ngIf="city.errors?.required && city.touched">Please enter your city</div>
+      <div class="invalid_feedback" *ngIf=" city.errors?.minlength && city.touched ">
+         Please enter the corrct city.
+      </div>
+      <input class="form-control s2" type="city" required minlength="2" name="city" placeholder="Event city"
+         [ngClass]="{'is-invalid':city.errors?.required && city.touched}" [(ngModel)]="userInfo.city" #city="ngModel">
+   </div>
+
+   <!-- street address -->
+   <div class="form-group ">
+      <div class="invalid_feedback" *ngIf="streetAddress.errors?.required && streetAddress.touched">Please enter
+         your street address</div>
+      <div class="invalid_feedback" *ngIf=" streetAddress.errors?.minlength && streetAddress.touched ">
+         Please enter the corrct address.
+      </div>
+      <input class="form-control s2" type="streetAddress" required minlength="2" name="streetAddress"
+         placeholder="Event street address"
+         [ngClass]="{'is-invalid':streetAddress.errors?.required && streetAddress.touched}"
+         [(ngModel)]="userInfo.streetAddress" #streetAddress="ngModel">
+   </div>
+   <!-- event data -->
+   <mat-form-field style="width:100%">
+      <input matInput [matDatepicker]="myDatepicker" [min]="minDate" placeholder="Event date" type="dateOfEvent"
+         required name="dateOfEvent" [ngClass]="{'is-invalid':dateOfEvent.errors?.required && dateOfEvent.touched}"
+         [(ngModel)]="PlannedTime" #dateOfEvent="ngModel">
+      <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
+      <mat-datepicker #myDatepicker></mat-datepicker>
+      <mat-error *ngIf="dateOfEvent.invalid">Please enter a Date</mat-error>
+   </mat-form-field>
+   <br>
+   <br>
+   <!--pick up or delivery-->
+   <mat-radio-group required aria-label="Select an option">
+      <mat-radio-button (change)="radioButtonChange($event)" color="primary" value="1">Pick Up</mat-radio-button>
+      <mat-radio-button (change)="radioButtonChange($event)"color="primary" value="0">Delivery</mat-radio-button>
+   </mat-radio-group>
+   <div *ngIf="districtSelectControl">
+      <hr>
+      <mat-form-field>
+         <mat-label>Select a district</mat-label>
+         <mat-select [(value)]="districtSelected">
+           <mat-option value="1">NorthShoreCity</mat-option>
+           <mat-option value="2">AucklandCity</mat-option>
+           <mat-option value="3">ManukauCity</mat-option>
+           <mat-option value="4">WaitakereCity</mat-option>
+         </mat-select>
+       </mat-form-field>
+   </div>
+   <hr>
+   <!-- Message -->
+   <div class="form-group">
+      <textarea class="form-control s2" rows="5" type="Message" name="Message" placeholder="Send a message:"
+         [(ngModel)]="userInfo.Message" #Message="ngModel">
+                      </textarea>
+   </div>
+
+   <div class="invalid_feedback mb-4">{{feedback_message}}</div>
+   <div class="row">
+      <div class="col-12 text-center"><button class="btn btn-outline-gold btn-block" type="submit"
+            [disabled]="isSendingEmail || isCartEmpty || !isShoppingCartValid">Submit</button></div>
+   </div>
+</form>
+<!-- order summary -->
+<!-- <div class="col-4 border-left">
           <div class="row">Order Summary</div>
           <div class="row"> <div class="col-5"> <img src="../../../assets/images/productImg1.jpeg" class="w-100"></div></div>
           <div class="row"><div class="col-8"><span>Product1152</span></div> <div class="col-4"></div></div>
