--- a/src/app/fcomponents/shopping-cart/shopping-cart.component.html
+++ b/src/app/fcomponents/shopping-cart/shopping-cart.component.html
@@ -44,7 +44,10 @@
 </div>
 <div class="mb-2" *ngIf="!isShoppingCartValid && prodsInCart.length!=0" style="color:red">{{errorMessage}}</div>
 <div class="text-right mb-2" *ngIf="totalPrice!=0">
-  Total Price: NZ $<span class="s2bold">{{totalPrice}}</span>
+  Total Price: NZ $<span class="s2bold">{{totalPrice}}</span> (15% GST included)
+</div>
+<div class="text-right mb-2" *ngIf="totalPrice!=0">
+  Total Price: NZ $<span class="s2bold">{{totalPrice}}</span> (15% GST included)
 </div>
 <div class="justify-content-end mb-3" *ngIf="prodsInCart.length!=0">
   <button class="btn btn_gold btn-sm" routerLink="/" type="button">
