--- a/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
+++ b/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="profile" class="card">
 	<div class="card-header">
 		<h4>{{ firstname }} {{ lastname }}</h4>	
+		<h5 *ngIf="firstname == null && lastname == null">Please update your details</h5>
 	</div>
 	<div class="card-body bg-light text-center">
 		<form [formGroup]="updateProfileForm" (ngSubmit)="onSubmit()">
@@ -32,14 +33,13 @@
 				<mat-slide-toggle (change)="onSlideChange($event)" aria-label="Subscribe" formControlName="subscribe" color="primary"></mat-slide-toggle>
 				<span> Subscribe to our news letter</span><br>
 			</div>
+
+			<div *ngIf="this.updateProfileForm.valid && errorMessage" class="alert alert-danger text-center s2" role="alert">
+				{{errorMessage}}
+			</div>
 		
 			<div id="buttonsWrap" class="mt-2">
-				<button mat-button [matMenuTriggerFor]="menu" class="primaryButton">Update Profile</button>
-				<mat-menu #menu="matMenu" overlapTrigger="true">
-					<p style="color: #c48f45;" mat-menu-item disabled>Everything Correct? <br></p>
-					<button type="submit" mat-menu-item class="primaryButton">Yes</button>
-					<button mat-menu-item>Cancel</button>
-				</mat-menu>
+				<button mat-raised-button type="submit" class="primaryButton">Update</button>
 			</div>
 		</form>
 	</div>
@@ -72,6 +72,7 @@
 		background-color: #c48f45;
 		color: white;
 		text-align: center;
+		min-height: 60px;
 	}
 	.slide {
 		margin: 0 auto;
