--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -76,7 +76,7 @@
 			</mat-form-field>
 
 			<mat-form-field>
-				<input matInput  (ngModelChange)="update()" placeholder="Confirm Password" formControlName="confirmpassword"
+				<input matInput placeholder="Confirm Password" formControlName="confirmpassword"
 					[type]="hide ? 'password' : 'text'" required>
 				<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
 					[attr.aria-pressed]="hide">
@@ -92,7 +92,7 @@
 		</div>
 
 		<div class="slide">
-			<mat-slide-toggle  formControlName="slider" (change)="onSlideChange($event)" aria-label="Subscribe" color="primary"></mat-slide-toggle>
+			<mat-slide-toggle (change)="onSlideChange($event)" aria-label="Subscribe" color="primary"></mat-slide-toggle>
 			<span> Subscribe to our news letter</span>
 		</div>
 
