--- a/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
+++ b/src/app/fcomponents/admin/admin-sideBar/admin-sideBar.component.html
@@ -68,7 +68,7 @@
           </a>
 	  </li>
 	  <li class="nav-item">
-		  <a class="nav-link" id="8">
+		  <a class="nav-link" id="8" routerLink='/admin/adminUserlist'>
 			<i class="fas fa-users"></i>
 			Users
 		  </a>
