--- a/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
@@ -9,8 +9,10 @@
    <!-- first name -->
    <div class="form-group">
 
-      <div class="invalid_feedback" *ngIf="FirstName.errors?.required && FirstName.touched">Please enter your
-         First name</div>
+
+      <div class="invalid_feedback" *ngIf="FirstName.errors?.required && FirstName.touched">Please enter
+         your
+         first name</div>
       <div class="invalid_feedback" *ngIf=" FirstName.errors?.minlength && FirstName.touched ">
          Your first name shall be at least 2 characters
       </div>
@@ -21,8 +23,9 @@
 
    <!-- last name -->
    <div class="form-group ">
-      <div class="invalid_feedback" *ngIf="LastName.errors?.required && LastName.touched">Please enter your
-         Last name</div>
+      <div class="invalid_feedback" *ngIf="LastName.errors?.required && LastName.touched">Please enter
+         your
+         last name</div>
       <div class="invalid_feedback" *ngIf=" LastName.errors?.minlength && LastName.touched ">
          Your last shall be at least 2 characters
       </div>
@@ -32,7 +35,8 @@
    </div>
    <!-- Email -->
    <div class="form-group ">
-      <div class="invalid_feedback" *ngIf="Email.errors?.required && Email.touched">Please enter your E-mail</div>
+      <div class="invalid_feedback" *ngIf="Email.errors?.required && Email.touched ">Please enter your
+         E-mail</div>
       <div class="invalid_feedback" *ngIf="Email.errors?.pattern && Email.touched">Incorrect Email entered</div>
       <input class="form-control s2" type="Email" required pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[a-z]{2,3}$"
          minlength="6" name="Email" placeholder="Enter your email"
@@ -41,7 +45,8 @@
    </div>
    <!-- phone number -->
    <div class="form-group ">
-      <div class="invalid_feedback" *ngIf="PhoneNum.errors?.required && PhoneNum.touched">Please input your Phone
+      <div class="invalid_feedback" *ngIf="PhoneNum.errors?.required && PhoneNum.touched">Please enter
+         your phone
          number</div>
       <div class="invalid_feedback" *ngIf="PhoneNum.errors?.pattern && PhoneNum.touched">
          Please enter the correct phone number.
@@ -51,13 +56,14 @@
          [(ngModel)]="userInfo.PhoneNum" #PhoneNum="ngModel">
    </div>
    <!-- company -->
-   <div class="form-group "><input class="form-control s2" type="text" placeholder="Company"
+   <div class="form-group "><input class="form-control s2" type="text" placeholder="Company(optional)"
          [(ngModel)]="userInfo.company" name="company"></div>
    <!-- city -->
    <div class="form-group ">
-      <div class="invalid_feedback" *ngIf="city.errors?.required && city.touched">Please enter your city</div>
+      <div class="invalid_feedback" *ngIf="city.errors?.required && city.touched">Please enter your city
+      </div>
       <div class="invalid_feedback" *ngIf=" city.errors?.minlength && city.touched ">
-         Please enter the corrct city.
+         Please enter a correct city.
       </div>
       <input class="form-control s2" type="city" required minlength="2" name="city" placeholder="Event city"
          [ngClass]="{'is-invalid':city.errors?.required && city.touched}" [(ngModel)]="userInfo.city" #city="ngModel">
@@ -65,10 +71,11 @@
 
    <!-- street address -->
    <div class="form-group ">
-      <div class="invalid_feedback" *ngIf="streetAddress.errors?.required && streetAddress.touched">Please enter
+      <div class="invalid_feedback" *ngIf="streetAddress.errors?.required && streetAddress.touched">
+         Please enter
          your street address</div>
       <div class="invalid_feedback" *ngIf=" streetAddress.errors?.minlength && streetAddress.touched ">
-         Please enter the corrct address.
+         Please enter a corrct address.
       </div>
       <input class="form-control s2" type="streetAddress" required minlength="2" name="streetAddress"
          placeholder="Event street address"
@@ -82,26 +89,29 @@
          [(ngModel)]="PlannedTime" #dateOfEvent="ngModel">
       <mat-datepicker-toggle matSuffix [for]="myDatepicker"></mat-datepicker-toggle>
       <mat-datepicker #myDatepicker></mat-datepicker>
-      <mat-error *ngIf="dateOfEvent.invalid">Please enter a Date</mat-error>
+      <mat-error *ngIf="dateOfEvent.invalid">Please enter a date</mat-error>
    </mat-form-field>
    <br>
    <br>
    <!--pick up or delivery-->
    <mat-radio-group required aria-label="Select an option">
       <mat-radio-button (change)="radioButtonChange($event)" color="primary" value="1">Pick Up</mat-radio-button>
-      <mat-radio-button (change)="radioButtonChange($event)"color="primary" value="0">Delivery</mat-radio-button>
+      <mat-radio-button (change)="radioButtonChange($event)" color="primary" value="0">Delivery</mat-radio-button>
+      <mat-error *ngIf="buttonError">Please make a option for pick-up or delievery</mat-error>
    </mat-radio-group>
+   <!--Select a district for delivery-->
    <div *ngIf="districtSelectControl">
       <hr>
-      <mat-form-field>
+      <mat-form-field class="form-">
          <mat-label>Select a district</mat-label>
-         <mat-select (selectionChange)="selectionChange($event)">
-           <mat-option value="1">NorthShoreCity</mat-option>
-           <mat-option value="2">AucklandCity</mat-option>
-           <mat-option value="3">ManukauCity</mat-option>
-           <mat-option value="4">WaitakereCity</mat-option>
+         <mat-select required (selectionChange)="selectionChange($event)">
+            <mat-option value="1">NorthShoreCity</mat-option>
+            <mat-option value="2">AucklandCity</mat-option>
+            <mat-option value="3">ManukauCity</mat-option>
+            <mat-option value="4">WaitakereCity</mat-option>
          </mat-select>
-       </mat-form-field>
+      </mat-form-field>
+      <mat-error *ngIf="districtError">Please select a district</mat-error>
    </div>
    <hr>
    <!-- Message -->
