--- a/src/app/fcomponents/admin/admin-products/admin-products.component.css
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.css
@@ -1,7 +1,7 @@
 th{
     position: sticky;
-    top:0;
-    z-index:99;
+    top: -15px;
+    z-index: 99;
     text-align:center;
 }
 th:first-child{
