--- a/src/app/fcomponents/payment-result/payment-result.component.html
+++ b/src/app/fcomponents/payment-result/payment-result.component.html
@@ -3,20 +3,33 @@
 
 
 
-  <div class="card">
+  <div *ngIf="result" class="card">
     <div class="card-header">
       <h4>Your Payment Status</h4>
     </div>
     <div class="card-body bg-light text-center">
-      {{paymentStatus}}
+      {{paymentStatusSuccess}}
+
+      <div id="buttonsWrap">
+        <button mat-raised-button routerLink='/home'>OK</button>
+      </div>
     </div>
+  </div>
+  <div *ngIf="!result" class="card">
+    <div class="card-header">
+      <h4>Your Payment Status</h4>
+    </div>
+    <div class="card-body bg-light text-center text-danger">
+      {{paymentStatusFailure}}
 
+      <div id="buttonsWrap">
+        <button mat-raised-button routerLink='/paymentoptions'>Pay Again</button>
+      </div>
+    </div>
   </div>
 
 
-  <div id="buttonsWrap">
-    <button mat-raised-button routerLink='/home'>OK</button>
-  </div>
+
 
 
 
